--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -20,3 +20,36 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+@layer components {
+    .container {
+        @apply mx-auto max-w-7xl px-4;
+    }
+
+    .button {
+        @apply flex justify-center items-center gap-2 rounded-md px-9 h-9 text-sm font-semibold;
+
+        &.blue {
+            @apply bg-blue-500 text-white;
+
+            &:hover {
+                @apply bg-blue-600;
+            }
+        }
+
+        &.red {
+            @apply bg-red-500 text-white;
+
+            &:hover {
+                @apply bg-red-600;
+            }
+        }
+
+        &.green {
+            @apply bg-green-500 text-white;
+
+            &:hover {
+                @apply bg-green-600;
+            }
+        }
+    }
+}
