feat: create landing page

--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,1 +1,13 @@
-<app-page></app-page>
+<section class="h-screen flex flex-col justify-center items-center gap-10"
+    [ngStyle]="{ background: 'url(assets/background-elements.svg)'  }">
+    <div class="flex flex-col items-center gap-4">
+        <app-big-logo />
+        <p
+            className="text-zinc-500 font-light w-96 leading-6 text-center select-none">
+            Crie e gerencie o convite do seu evento de forma rápida e fácil, sem
+            complicações!
+        </p>
+    </div>
+    <a routerLink="/" class="button blue text-lg uppercase">Crie 0 seu
+        evento</a>
+</section>
