--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col items-center gap-4">
         <app-big-logo />
         <p
-            className="text-zinc-500 font-light w-96 leading-6 text-center select-none">
+            class="text-zinc-500 font-light w-96 leading-6 text-center select-none">
             Crie e gerencie o convite do seu evento de forma rápida e fácil, sem
             complicações!
         </p>
