--- a/apps/frontend/src/app/components/event/form-event/form-event.component.html
+++ b/apps/frontend/src/app/components/event/form-event/form-event.component.html
@@ -10,26 +10,26 @@
                 [description]="'Identificador único e exclusivo para o evento (usado na URL)'"
                 [value]="Alias.format(event.alias || '')"
                 (valueChange)="toggleEvent('alias', $event)"
-                [error]="aliasValid ? '' : 'Alias já foi utilizado em outro evento'"/>
+                [error]="aliasValid ? '' : 'Alias já foi utilizado em outro evento'" />
             <app-input
                 [label]="'Nome'"
                 [description]="'Nome do evento (Festa de Aniversário do João)'"
                 [value]="event.name ?? ''"
-                (valueChange)="toggleEvent('name', $event)"/>
+                (valueChange)="toggleEvent('name', $event)" />
         </div>
 
         <div class="flex flex-col gap-5">
             <app-input
                 [label]="'Data'"
                 [description]="'Data e hora em que o evento ocorrerá'"
-                [value]="DateFormatter.(event.date || new Date())"
+                [value]="formatEventDate(event.date)"
                 [type]="'datetime-local'"
-                (valueChange)="toggleEvent('date', DateFormatter.parse($event))"/>
+                (valueChange)="toggleEvent('date', DateFormatter.unformat($event.toString()))" />
             <app-input
                 [label]="'Local'"
                 [description]="'Local onde o evento será realizado'"
                 [value]="event.location || ''"
-                (valueChange)="toggleEvent('location', $event)"/>
+                (valueChange)="toggleEvent('location', $event)" />
         </div>
 
         <div class="flex flex-col gap-5">
@@ -37,23 +37,23 @@
                 [label]="'Descrição'"
                 [description]="'Descrição do evento (Só entra se trouxer presente!)'"
                 [value]="event.description || ''"
-                (valueChange)="toggleEvent('description', $event)"/>
+                (valueChange)="toggleEvent('description', $event)" />
             <app-input
                 [label]="'Imagem'"
                 [description]="'URL da imagem que será exibida no convite'"
                 [value]="event.image || ''"
-                (valueChange)="toggleEvent('image', $event)"/>
+                (valueChange)="toggleEvent('image', $event)" />
             <app-input
                 [label]="'Background'"
                 [description]="'URL da imagem que será exibida como background no convite'"
-                [value]="event.imageBackground || ''"
-                (valueChange)="toggleEvent('imageBackground', $event)"/>
+                [value]="event.backgroundImage || ''"
+                (valueChange)="toggleEvent('imageBackground', $event)" />
             <app-input
                 [label]="'Público Esperado'"
                 [description]="'Total de convidados e acompanhantes esperados'"
                 [value]="event.expectedAudience || 1"
                 [type]="'number'"
-                (valueChange)="toggleEvent('expectedAudience', +$event)"/>
+                (valueChange)="toggleEvent('expectedAudience', +$event)" />
         </div>
     </app-steps>
 </section>
