--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-page></app-page>
+<ng-container *ngIf="router.url === '/'">
+    <app-landing></app-landing>
+</ng-container>
+<ng-container *ngIf="router.url !== '/'">
+    <app-page></app-page>
+</ng-container>
