refactor: adjust step components

--- a/apps/frontend/src/app/components/shared/steps/steps.component.html
+++ b/apps/frontend/src/app/components/shared/steps/steps.component.html
@@ -1,45 +1,66 @@
 <section class="flex-1 flex flex-col gap-10 w-full">
     <nav class="self-center">
-        <div *ngFor="let label of labels; let i = index"
-            class="flex items-center gap-2">
-            <span class="flex items-center justify-center w-9 h-9 rounded-full"
-                [ngClass]="{'bg-white text-black ': currentStep === i, 'bg-zinc-700 text-zinc-400': currentStep! === i}">
-                {{i+ 1}}
-            </span>
-            <span
-                [ngClass]="currentStep === i ? 'text-white' : 'text-zinc-600' ">{{label}}</span>
+      <div class="flex gap-4 select-none">
+        <div *ngFor="let step of renderLabels()" class="flex items-center gap-2">
+          <span
+            class="flex items-center justify-center w-9 h-9 rounded-full"
+            [ngClass]="{
+              'bg-white text-black': step.selected,
+              'bg-zinc-700 text-zinc-400': !step.selected
+            }"
+          >
+            {{ step.index + 1 }}
+          </span>
+          <span [ngClass]="{ 'text-white': step.selected, 'text-zinc-600': !step.selected }">
+            {{ step.label }}
+          </span>
         </div>
+      </div>
     </nav>
-    <ng-content></ng-content>
+  
+    <main>
+      <ng-content select="[step{{ currentStep }}]"></ng-content>
+    </main>
+  
     <footer class="flex justify-between">
-        <button
-            (click)="previousStep()"
-            class="button"
-            [ngClass]="{
-            'bg-zinc-400 cursor-not-allowed opacity-50':noPreviousStep(), 
-            'bg-zinc-700 hover:bg-zinc-600 text-white': !noPreviousStep()
+      <button
+        (click)="previousStep()"
+        class="button"
+        [ngClass]="{
+          'bg-zinc-400 cursor-not-allowed opacity-50': noPreviousStep(),
+          'bg-zinc-700 hover:bg-zinc-600 text-white': !noPreviousStep()
         }"
-            [disabled]="noPreviousStep()">Anterior
-        </button>
-        <button
-            *ngIf="noPreviousStep()"
-            (click)="onAction()"
-            class="button"
-            [ngClass]="{
-            'bg-zinc-400 cursor-not-allowed opacity-50': !allowNextStep[currentStep], 
-            'bg-green-700 hover:bg-green-600 text-white': allowNextStep[currentStep]
+        [disabled]="noPreviousStep()"
+      >
+        <span>Anterior</span>
+      </button>
+  
+      <button
+        *ngIf="noNextStep(); else next"
+        (click)="action.emit()"
+        class="button"
+        [ngClass]="{
+          'bg-zinc-400 cursor-not-allowed opacity-50': !getNextStep,
+          'bg-green-700 hover:bg-green-600 text-white': getNextStep
         }"
-            [disabled]="!allowNextStep[currentStep]">{{actionLabel}}
-        </button>
+        [disabled]="!getNextStep"
+      >
+        <span>{{ actionLabel }}</span>
+      </button>
+  
+      <ng-template #next>
         <button
-            *ngIf="!noPreviousStep()"
-            (click)="nextStep()"
-            class="button"
-            [ngClass]="{
-            'bg-zinc-400 cursor-not-allowed opacity-50': !allowNextStep[currentStep], 
-            'bg-green-700 hover:bg-green-600 text-white': allowNextStep[currentStep]
-        }"
-            [disabled]="!allowNextStep[currentStep]">Próximo
+          (click)="nextStep()"
+          class="button"
+          [ngClass]="{
+            'bg-zinc-400 cursor-not-allowed opacity-50': !getNextStep || noNextStep(),
+            'bg-green-700 hover:bg-green-600 text-white': getNextStep && !noNextStep()
+          }"
+          [disabled]="!getNextStep || noNextStep()"
+        >
+          <span>Próximo</span>
         </button>
+      </ng-template>
     </footer>
-</section>
+  </section>
+  
