fix: replace the use of ng-content with a projected content array

--- a/apps/frontend/src/app/components/shared/steps/steps.component.html
+++ b/apps/frontend/src/app/components/shared/steps/steps.component.html
@@ -19,8 +19,17 @@
     </nav>
   
     <main>
-      <ng-content select="[step{{ currentStep }}]"></ng-content>
+      <ng-container *ngIf="currentStep === 0">
+        <ng-content select="[step0]"></ng-content>
+      </ng-container>
+      <ng-container *ngIf="currentStep === 1">
+        <ng-content select="[step1]"></ng-content>
+      </ng-container>
+      <ng-container *ngIf="currentStep === 2">
+        <ng-content select="[step2]"></ng-content>
+      </ng-container>
     </main>
+    
   
     <footer class="flex justify-between">
       <button
