refactor: adjust style

--- a/apps/frontend/src/app/components/shared/window/window.component.html
+++ b/apps/frontend/src/app/components/shared/window/window.component.html
@@ -2,7 +2,7 @@
     <img
         [src]="background ? background : 'https://www.nuvent.com.br/wp-content/uploads/2019/12/EVP_0141-scaled.jpg'"
         alt="background"
-        class="-z-30 object-cover"
+        class="-z-30 object-cover absolute w-full h-full"
         fill>
     <section class="bg-black/80">
         <header class="flex gap-7 p-6 items-center">
@@ -10,7 +10,7 @@
                 <img
                     [src]="image ? image : 'https://t3.ftcdn.net/jpg/08/12/70/12/360_F_812701281_qDF1YDwHrQgs2BbUCIrgqzkdkNhokjwp.jpg'"
                     alt="Event"
-                    class="rounded-full object-cover"
+                    class="rounded-full object-cover w-full h-full"
                     fill>
             </figure>
             <div class="flex flex-col">
