refactor: define first capital letter

--- a/apps/frontend/src/app/pages/event/event.component.html
+++ b/apps/frontend/src/app/pages/event/event.component.html
@@ -3,7 +3,7 @@
         [label]="'Qual evento vamos criar?'"
         [image]="event.image"
         [background]="event.backgroundImage"
-        [title]="event.name ? event.name : 'Novo evento'">
+        [title]="event.name ? event.name : 'Novo Evento'">
         <app-form-event></app-form-event>
     </app-window>
 </section>
