fix: rename value change from imageBackground to backgroundImage

--- a/apps/frontend/src/app/components/event/form-event/form-event.component.html
+++ b/apps/frontend/src/app/components/event/form-event/form-event.component.html
@@ -47,7 +47,7 @@
                 [label]="'Background'"
                 [description]="'URL da imagem que será exibida como background no convite'"
                 [value]="event.backgroundImage || ''"
-                (valueChange)="toggleEvent('imageBackground', $event)" />
+                (valueChange)="toggleEvent('backgroundImage', $event)" />
             <app-input
                 [label]="'Público Esperado'"
                 [description]="'Total de convidados e acompanhantes esperados'"
