--- a/apps/frontend/src/app/components/shared/clipboard/clipboard.component.html
+++ b/apps/frontend/src/app/components/shared/clipboard/clipboard.component.html
@@ -1,9 +1,12 @@
 <section class="flex flex-col gap-2">
-    <h2>{{label}}</h2>
+    <h2>{{ label }}</h2>
     <div
         class="flex items-center gap-3 bg-black border border-zinc-800 px-4 py-2 text-zinc-300 text-lg">
-        <fa-icon *ngIf="icon" [icon]="icon" [ngClass]="{ stroke: '1.3' }" />
-        <p class="flex-1">{{text}}</p>
+        <fa-icon
+            *ngIf="icon"
+            [icon]="icon"
+            [ngClass]="{ stroke: '1.3' }" />
+        <p class="flex-1">{{ text }}</p>
 
         <fa-icon
             [icon]="faCopy"
@@ -14,6 +17,7 @@
             [ngClass]="{ stroke: '1.3' }"
             aria-label="Copiar texto" />
     </div>
-    <p *ngIf="observation" class="text-xs text-yellow-300/80">{{observation}}
+    <p *ngIf="observation" class="text-xs text-yellow-300/80">
+        {{ observation}}
     </p>
 </section>
