--- a/apps/frontend/src/app/components/event/event-information/event-information.component.html
+++ b/apps/frontend/src/app/components/event/event-information/event-information.component.html
@@ -2,10 +2,10 @@
     [className]="classNameProps ? classNameProps : ''">
     <div *ngIf="!hideName"
         class="flex-1 flex items-center gap-4 border border-zinc-800 px-6 py-3 rounded-lg">
-        <h2 class="text-2xl font-black">{{event.alias}} </h2>
-        <h3 class="text-xl text-zinc-300">{{event.name}}</h3>
+        <h2 class="text-2xl font-black">{{event!.alias}} </h2>
+        <h3 class="text-xl text-zinc-300">{{event!.name}}</h3>
     </div>
-    <div class="flez gap-2">
+    <div class="flex gap-2">
         <app-information [label]="'Data:'">
             <span> {{ formattedDate }} </span>
         </app-information>
@@ -14,6 +14,6 @@
         </app-information>
     </div>
     <app-information [label]="'Descrição:'">
-        {{event.description}}
+        {{event!.description}}
     </app-information>
 </section>
