fix: replace <ng-container> with <ng-content> in the InformationComponent template

--- a/apps/frontend/src/app/components/shared/information/information.component.html
+++ b/apps/frontend/src/app/components/shared/information/information.component.html
@@ -1,5 +1,5 @@
 <section
-    class="flex-1 flex flex-col items-start border border-zinc-800 px-6 py-3 rounded-lg">
+    class="flex flex-col items-start border border-zinc-800 px-6 py-3 rounded-lg">
     <h3 class="text-zinc-400 font-bold">{{label}}</h3>
-    <ng-container></ng-container>
+    <ng-content></ng-content>
 </section>
