--- a/apps/frontend/src/app/components/event/access-by-qr-code/access-by-qr-code.component.html
+++ b/apps/frontend/src/app/components/event/access-by-qr-code/access-by-qr-code.component.html
@@ -1,5 +1,5 @@
 <figure
-    class="flex flex-col items-center justify-center gap-4 border border-zinc-800 py-5 px-10">
-    <h4 class="text-sm font-light text-zinc-400">Acesse via Mobile</h4>
+    class="h-full flex flex-col items-center justify-center gap-4 border border-zinc-800 py-5 px-6">
+    <h4 class="text-sm font-light text-center text-zinc-400">Acesse via Mobile</h4>
     <img [src]="qrCodeUrl" alt="QR Code" class="w-32 h-32" />
 </figure>
