refactor: change text style

--- a/apps/frontend/src/app/components/event/event-password-form/event-password-form.component.html
+++ b/apps/frontend/src/app/components/event/event-password-form/event-password-form.component.html
@@ -2,7 +2,7 @@
     class="flex flex-col items-center gap-4 bg-zinc-900 p-8
     rounded-lg shadow-lg w-[500px] border border-zinc-800">
     <h1 class="text-3xl font-black">Bem-vindo(a)</h1>
-    <h2 class="text-lg font-semibold -mt-3">Administrador</h2>
+    <h2 class="text-lg -mt-3">Administrador</h2>
     <p class="text-sm text-zinc-400">
         Insira sua senha para gerenciar o evento
     </p>
@@ -12,7 +12,7 @@
         placeholder="Digite sua senha"
         type="password"
         [outterClassName]="'w-full'"></app-input>
-    <button class="button blue" (click)="onAccessEvent()">
+    <button class="button blue float-end mt-4 font-normal" (click)="onAccessEvent()">
         Acessar Evento
     </button>
 </form>
