refactor: rename path to router link

--- a/apps/frontend/src/app/pages/landing/landing.component.html
+++ b/apps/frontend/src/app/pages/landing/landing.component.html
@@ -8,6 +8,6 @@
             complicações!
         </p>
     </div>
-    <a routerLink="/event" class="button blue text-lg uppercase">Crie o seu
+    <a routerLink="/evento" class="button blue text-lg uppercase">Crie o seu
         evento</a>
 </section>
