--- a/apps/frontend/src/app/components/shared/input-boolean/input-boolean.component.html
+++ b/apps/frontend/src/app/components/shared/input-boolean/input-boolean.component.html
@@ -4,13 +4,13 @@
         <button
             class="flex-1 flex items-center justify-center rounded-md cursor-pointer"
             [ngClass]="value === true ? 'bg-black font-bold' : 'text-zinc-400'"
-            (click)="onItemClick(true)">
+            (click)="onItemClick(true, $event)">
             Sim
         </button>
         <button
             class="flex-1 flex items-center justify-center rounded-md cursor-pointer"
             [ngClass]="value === false ? 'bg-black font-bold' : 'text-zinc-400'"
-            (click)="onItemClick(false)">
+            (click)="onItemClick(false, $event)">
             Não
         </button>
     </div>
