--- a/apps/frontend/src/app/pages/events/events.component.html
+++ b/apps/frontend/src/app/pages/events/events.component.html
@@ -1,7 +1,7 @@
 <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5 p-5">
   <article
     class="flex flex-col w-full overflow-hidden bg-zinc-800 rounded-lg"
-    *ngFor="let event of staticEvents">
+    *ngFor="let event of dynamicEvents">
     <figure class="relative w-full h-52 overflow-hidden">
       <img [src]="event.image" [alt]="event.name"
         class="object-cover w-full h-full">
