--- a/apps/frontend/src/app/pages/events/events.component.html
+++ b/apps/frontend/src/app/pages/events/events.component.html
@@ -17,7 +17,7 @@
           Admin
         </a>
         <a
-          [routerLink]="['/convite', event.alias]"
+          [routerLink]="['/evento/convite', event.alias]"
           class="flex-1 button green min-w-[120px]">
           Convite
         </a>
