--- a/apps/frontend/src/app/components/event/item-guest/item-guest.component.html
+++ b/apps/frontend/src/app/components/event/item-guest/item-guest.component.html
@@ -1,7 +1,7 @@
 <article
     class="flex justify-between bg-black/40 rounded-md px-6 py-3 border border-zinc-800">
     <div class="flex flex-col">
-        <h2 class="text-xl font-bold">{{guest.name}}</h2>
+        <h2 class="text-xl font-bold">{{guest.guestName}}</h2>
         <p class="text-sm text-zinc-400">{{guest.email}}</p>
     </div>
     <div class="flex flex-col items-end">
