fix: rename path to admin page

--- a/apps/frontend/src/app/pages/success/success.component.html
+++ b/apps/frontend/src/app/pages/success/success.component.html
@@ -14,7 +14,7 @@
             <app-clipboard
                 [icon]="faLink"
                 [label]="'Link Administrador'"
-                [text]="currentURL + '/event/admin/' + event.id" />
+                [text]="currentURL + '/evento/admin/' + event.id" />
             <app-clipboard
                 [icon]="faKey"
                 [label]="'Senha Administrador'"
