--- a/apps/frontend/src/app/components/event/form-event/form-event.component.html
+++ b/apps/frontend/src/app/components/event/form-event/form-event.component.html
@@ -1,59 +1,59 @@
-<section>
+<section class="p-4 sm:p-6">
     <app-steps
         (action)="saveEvent()"
         [actionLabel]="'Salvar'"
         [labels]="labels"
         [allowNextStep]="allowNextStep">
-    <div class="flex flex-col gap-5" step0>
+        <div class="flex flex-col gap-4 sm:gap-5" step0>
             <app-input
                 [label]="'Identificador'"
                 [description]="'Identificador único e exclusivo para o evento (usado na URL)'"
                 [value]="Alias.format(event.alias || '')"
                 (valueChange)="toggleEvent('alias', $event)"
-                [error]="aliasValid ? '' : 'Alias já foi utilizado em outro evento'" />
+                [error]="aliasValid ? '' : 'Alias já foi utilizado em outro evento'"></app-input>
             <app-input
                 [label]="'Nome'"
                 [description]="'Nome do evento (Festa de Aniversário do João)'"
                 [value]="event.name ?? ''"
-                (valueChange)="toggleEvent('name', $event)" />
+                (valueChange)="toggleEvent('name', $event)"></app-input>
         </div>
 
-        <div class="flex flex-col gap-5" step1>
+        <div class="flex flex-col gap-4 sm:gap-5" step1>
             <app-input
                 [label]="'Data'"
                 [description]="'Data e hora em que o evento ocorrerá'"
                 [value]="formatEventDate(event.date)"
                 [type]="'datetime-local'"
-                (valueChange)="toggleEvent('date', DateFormatter.unformat($event.toString()))" />
+                (valueChange)="toggleEvent('date', DateFormatter.unformat($event.toString()))"></app-input>
             <app-input
                 [label]="'Local'"
                 [description]="'Local onde o evento será realizado'"
                 [value]="event.location || ''"
-                (valueChange)="toggleEvent('location', $event)" />
+                (valueChange)="toggleEvent('location', $event)"></app-input>
         </div>
 
-        <div class="flex flex-col gap-5" step2>
+        <div class="flex flex-col gap-4 sm:gap-5" step2>
             <app-input
                 [label]="'Descrição'"
                 [description]="'Descrição do evento (Só entra se trouxer presente!)'"
                 [value]="event.description || ''"
-                (valueChange)="toggleEvent('description', $event)" />
+                (valueChange)="toggleEvent('description', $event)"></app-input>
             <app-input
                 [label]="'Imagem'"
                 [description]="'URL da imagem que será exibida no convite'"
                 [value]="event.image || ''"
-                (valueChange)="toggleEvent('image', $event)" />
+                (valueChange)="toggleEvent('image', $event)"></app-input>
             <app-input
                 [label]="'Background'"
                 [description]="'URL da imagem que será exibida como background no convite'"
                 [value]="event.backgroundImage || ''"
-                (valueChange)="toggleEvent('backgroundImage', $event)" />
+                (valueChange)="toggleEvent('backgroundImage', $event)"></app-input>
             <app-input
                 [label]="'Público Esperado'"
                 [description]="'Total de convidados e acompanhantes esperados'"
                 [value]="event.expectedAudience || 1"
                 [type]="'number'"
-                (valueChange)="toggleEvent('expectedAudience', +$event)" />
+                (valueChange)="toggleEvent('expectedAudience', +$event)"></app-input>
         </div>
     </app-steps>
 </section>
