--- a/apps/frontend/src/app/components/shared/input/input.component.html
+++ b/apps/frontend/src/app/components/shared/input/input.component.html
@@ -1,19 +1,29 @@
-<form class="flex flex-col gap-2" [ngClass]="outterClassName">
+<form
+    class="flex flex-col gap-2 w-full sm:gap-3"
+    [ngClass]="outterClassName">
     <div class="flex flex-col">
-        <label *ngIf="label" class="text-lg font-black text-white">
+        <label *ngIf="label" class="text-base sm:text-lg font-black text-white">
             {{ label }}
         </label>
-        <p *ngIf="description" class="text-sm font-light text-zinc-400 -mt-1">
+        <p
+            *ngIf="description"
+            class="text-xs sm:text-sm font-light text-zinc-400 -mt-1">
             {{ description }}
         </p>
     </div>
+
     <input
         [type]="type"
         [value]="value"
         (input)="onInputChange($event)"
-        class="w-full px-3 py-2 border border-white/20 focus:border-white/50 rounded-md bg-black/50" />
-    <span *ngIf="error" class="pl-2 text-sm text-red-500">{{ error }}</span>
-    <p *ngIf="!error && observation" class="pl-2 text-xs text-yellow-300">
+        class="w-full px-3 py-2 border border-white/20 focus:border-white/50 rounded-md bg-black/50 text-sm sm:text-base" />
+
+    <span *ngIf="error" class="pl-2 text-xs sm:text-sm text-red-500">
+        {{ error }}
+    </span>
+    <p
+        *ngIf="!error && observation"
+        class="pl-2 text-xs sm:text-sm text-yellow-300">
         {{ observation }}
     </p>
 </form>
