refactor: send id to load event

--- a/apps/frontend/src/app/pages/admin/admin.component.html
+++ b/apps/frontend/src/app/pages/admin/admin.component.html
@@ -10,7 +10,7 @@
     <ng-template #passwordForm>
         <app-event-password-form
             [password]="password"
-            (accessEvent)="loadEvent(event.id, password)"
+            (accessEvent)="loadEvent(id, password)"
             (changePassword)="password = $event"></app-event-password-form>
     </ng-template>
 </div>
