fix: Prevents the default behavior of a link element (<a>), such as navigating to another page or reloading, from occurring

--- a/apps/frontend/src/app/components/event/event-password-form/event-password-form.component.html
+++ b/apps/frontend/src/app/components/event/event-password-form/event-password-form.component.html
@@ -12,7 +12,7 @@
         placeholder="Digite sua senha"
         type="password"
         [outterClassName]="'w-full'"></app-input>
-    <button class="button blue float-end mt-4 font-normal" (click)="onAccessEvent()">
+    <button class="button blue float-end mt-4 font-normal" (click)="onAccessEvent($event)">
         Acessar Evento
     </button>
 </form>
