refactor: send alias instead of id

--- a/apps/frontend/src/app/pages/success/success.component.html
+++ b/apps/frontend/src/app/pages/success/success.component.html
@@ -10,7 +10,7 @@
             <app-clipboard
                 [icon]="faLink"
                 [label]="'Link para convidar'"
-                [text]="currentURL + '/convite/' + event.id" />
+                [text]="currentURL + '/evento/convite/' + event.alias" />
             <app-clipboard
                 [icon]="faLink"
                 [label]="'Link Administrador'"
